--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.30\SQLSERVER2012;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=Vertis!2#"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
