--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -20,6 +20,16 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ContactUsEmail" value="priyanka.p@vertisinfotech.com"/>
+    <add key="isSMTPAuthentication" value="true"/>
+    <add key="SMTPSERVER" value="smtp.gmail.com"/>
+    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
+    <add key="SmtpServerUsername" value="noreply@vertisinfotech.com"/>
+    <add key="SmtpServerPassword" value="Smtp!2#4"/>
+    <add key="SMTPPort" value="587"/>
+    <add key="isUseDefaultCredentials" value="false"/>
+    <add key="isEnableSSl" value="true"/>
+    <add key="FromEmail" value="support@askmirai.com"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
