--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -30,6 +30,8 @@
     <add key="isUseDefaultCredentials" value="false"/>
     <add key="isEnableSSl" value="true"/>
     <add key="FromEmail" value="support@askmirai.com"/>
+    <add key="SuperAdminEmailId" value="super@admin.com"/>
+    <add key="SuperAdminUserPassword" value="admin!2#4"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
