--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -15,6 +15,7 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="constr" value="server=10.10.10.30\SQLSERVER2012;uid=sa;pwd=Vertis!2#;database=AsquareMirai;"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
