--- a/MiraiConsultMVC/Views/Web.config
+++ b/MiraiConsultMVC/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="MiraiConsultMVC.Models" />
+        <add namespace="MiraiConsultMVC"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
