--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -209,8 +209,10 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AnswerModel.cs" />
+    <Compile Include="Models\ComparePassword.cs" />
     <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Models\Home\Contact.cs" />
+    <Compile Include="Models\User\ChangePassword.cs" />
     <Compile Include="Models\User\Login.cs" />
     <Compile Include="Models\Utilities\UtilityManager.cs" />
     <Compile Include="Models\doctordetails.cs" />
@@ -496,6 +498,12 @@
     <Content Include="Views\Home\TermsOfUse.cshtml" />
     <Content Include="Views\Home\HowWeWorks.cshtml" />
     <Content Include="Views\Questions\_DoctorQuestionList.cshtml" />
+    <Content Include="Views\User\AssignQuestion.cshtml" />
+    <Content Include="Views\User\DoctorSignUp.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
+    <Content Include="Views\User\ManageDoctors.cshtml" />
+    <Content Include="Views\User\PatientSignUp.cshtml" />
+    <Content Include="Views\User\Changepassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
