--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -44,7 +44,7 @@
       <HintPath>..\DAL\bin\DAL.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>..\..\..\miraiconsult\askmirai\bin\log4net.dll</HintPath>
+      <HintPath>..\..\miraiconsult\askmirai\bin\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -209,6 +209,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AnswerModel.cs" />
+    <Compile Include="Models\DoctorProfile.cs" />
     <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Models\Home\Contact.cs" />
     <Compile Include="Models\User\Login.cs" />
@@ -496,6 +497,7 @@
     <Content Include="Views\Home\TermsOfUse.cshtml" />
     <Content Include="Views\Home\HowWeWorks.cshtml" />
     <Content Include="Views\Questions\_DoctorQuestionList.cshtml" />
+    <Content Include="Views\Doctors\DoctorProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
