--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -15,6 +15,8 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="SuperAdminEmailId" value="super@admin.com"/>
+    <add key="SuperAdminUserPassword" value="admin!2#4"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
