committing changes in utility.js and Web.config for compatibility to services

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -98,4 +98,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.serviceModel>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="True"/>
+  </system.serviceModel>
 </configuration>
