--- a/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
+++ b/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
@@ -9,14 +9,31 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.30\SQLSERVER2012;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=Vertis!2#"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="SuperAdminEmailId" value="super@admin.com"/>
+    <add key="SuperAdminUserPassword" value="admin!2#4"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ContactUsEmail" value="priyanka.p@vertisinfotech.com"/>
+    <add key="isSMTPAuthentication" value="true"/>
+    <add key="SMTPSERVER" value="smtp.gmail.com"/>
+    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
+    <add key="SmtpServerUsername" value="noreply@vertisinfotech.com"/>
+    <add key="SmtpServerPassword" value="Smtp!2#4"/>
+    <add key="SMTPPort" value="587"/>
+    <add key="isUseDefaultCredentials" value="false"/>
+    <add key="isEnableSSl" value="true"/>
+    <add key="FromEmail" value="support@askmirai.com"/>
+    <add key="SuperAdminEmailId" value="super@admin.com"/>
+    <add key="SuperAdminUserPassword" value="sal123"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -81,4 +98,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.serviceModel>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="True"/>
+  </system.serviceModel>
 </configuration>
