Completed home page

--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -215,10 +215,6 @@
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\State.cs" />
-    <Compile Include="Views\Home\obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="Views\Home\obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="Views\Home\obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="Models\Answer.cs" />
     <Compile Include="Models\AnswerModel.cs" />
     <Compile Include="Models\DoctorProfile.cs" />
     <Compile Include="Models\QuestionModel.cs" />
@@ -583,7 +579,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Shared\_Internal.cshtml" />
     <Content Include="Views\Shared\_AskmiraiMasterLayout.cshtml" />
     <Content Include="Views\Shared\_PatientMasterLayout.cshtml" />
@@ -598,6 +596,11 @@
     <Content Include="Views\Patients\PatientProfile.cshtml" />
     <Content Include="Views\Questions\_DoctorQuestionList.cshtml" />
     <Content Include="Views\Doctors\DoctorProfile.cshtml" />
+    <Content Include="Views\User\AssignQuestion.cshtml" />
+    <Content Include="Views\User\DoctorSignUp.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
+    <Content Include="Views\User\ManageDoctors.cshtml" />
+    <Content Include="Views\User\PatientSignUp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
