--- a/MiraiConsultMVC/Views/Web.config
+++ b/MiraiConsultMVC/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="MiraiConsultMVC.Models" />
         <add namespace="MiraiConsultMVC"/>
+        <add namespace="System.Configuration"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
