--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -30,6 +30,7 @@
     <add key="isUseDefaultCredentials" value="false"/>
     <add key="isEnableSSl" value="true"/>
     <add key="FromEmail" value="support@askmirai.com"/>
+    <add key="defaultUrl" value="http://localhost:53706/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
